# xQP-tasks-constraints

./: .gitignore  CMakeLists.txt  README.md
config/: version.h.in
include/xQP/: BaseTask.hpp
src/: CMakeLists.txt
src/BaseTask/: BaseTask.hpp  CMakeLists.txt
src/CartesianVelocity/: CMakeLists.txt  CartesianVelocity.cpp  CartesianVelocity.hpp
